--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -218,5 +218,278 @@
     "Qr_text2": "Автоматический выбор последней партии",
     "Qr_text3": "Выбор по модальности",
     "Qr_text4": "При сканировании штрихкода система автоматически выбирает последнюю партию и добавляет её в счёт. Удобно для ускорения работы.",
-    "Qr_text5": "При сканировании штрихкода система отображает партии в виде списка, и вы вручную выбираете нужную. Удобно для точности."
+    "Qr_text5": "При сканировании штрихкода система отображает партии в виде списка, и вы вручную выбираете нужную. Удобно для точности.",
+    "income_header_not_started": "Приём — поступления на склад",
+    "income_header_incoming": "Приход",
+    "income_header_transfer": "Перемещение",
+    "income_header_return": "Возврат",
+    "income_header_return_disposal": "Возврат (утилизация)",
+    "income_header_unknown": "Неизвестно",
+    "toggle_sidebar_size_title": "Изменить размер боковой панели",
+    "sidebar_category": "Категория",
+    "sidebar_product": "Товар",
+    "loading": "Загрузка...",
+    "no_categories_found": "Категорий не найдено.",
+    "no_products_in_category": "В выбранной категории товары не найдены.",
+    "select_category_prompt": "Пожалуйста, выберите категорию для просмотра товаров.",
+    "product_no_name": "Без названия",
+    "product_batch_label": "Партия:",
+    "product_barcode_label": "Штрихкод:",
+    "default_label": "По умолчанию",
+    "undefined_label": "—",
+    "op_incoming_card": "Поступление на склад",
+    "op_transfer_card": "Принять перемещение",
+    "op_return_card": "Принять возврат",
+    "return_disposal_label": "Отправить на утилизацию",
+    "select_sender_placeholder": "Укажите отправителя",
+    "selected_label": "Выбрано:",
+    "search_nothing_found": "Ничего не найдено",
+    "invoice_search_placeholder": "Поиск по номеру накладной (например INV-202510-0154)",
+    "invoice_search_note": "* Вы можете выбрать несколько накладных из результатов. Один и тот же id нельзя выбрать дважды.",
+    "select_button": "Выбрать",
+    "comment_label": "Комментарий (необязательно)",
+    "comment_placeholder": "Добавьте комментарий к операции...",
+    "other_location_placeholder": "Название внешней локации",
+    "select_staff_placeholder": "Выберите поставщика / курьера",
+    "btn_start_transfer": "Начать приём перемещения",
+    "btn_start_return": "Начать приём возврата",
+    "btn_start_return_disposal": "Начать возврат (утилизация)",
+    "btn_start_incoming": "Поступление на склад",
+    "product_search_placeholder": "Поиск по названию товара...",
+    "search_button": "Поиск",
+    "barcode_button": "Штрихкод",
+    "barcode_input_placeholder": "Введите 13 цифр...",
+    "label_sender": "Отправитель",
+    "label_receiver": "Получатель",
+    "label_time": "Время",
+    "label_total_sum": "Общая стоимость",
+    "sale_price_type_label": "Тип цены продажи",
+    "search_results_title": "Результаты поиска",
+    "clear_results_title": "Очистить результаты",
+    "results_count_label": "{{count}} результатов",
+    "table_col_index": "#",
+    "table_col_batch": "Партия",
+    "table_col_name": "Наименование",
+    "table_col_price": "Цена",
+    "table_col_qty": "Количество",
+    "table_col_unit": "Ед. изм.",
+    "table_col_sale_price": "Цена продажи",
+    "table_col_total": "Итого",
+    "table_col_remove": "Удалить",
+    "table_col_sold": "Продано",
+    "table_col_sale_price_label": "Цена продажи (label)",
+    "no_products_message": "Товары отсутствуют",
+    "dash_fallback": "—",
+    "new_batch_label": "Новая партия",
+    "s_price_placeholder": "--",
+    "price_type_not_selected": "Тип цены не выбран",
+    "remove_row_title": "Удалить строку",
+    "qty_exceeds_stock": "Количество превышает запас ({{avail}})",
+    "modal_title_transfer": "Документ перемещения на склад",
+    "modal_title_return": "Документ приёма возврата",
+    "modal_title_return_disposal": "Документ приёма возврата (утилизация)",
+    "modal_title_incoming": "Документ поступления на склад",
+    "modal_total_label": "Итого",
+    "signature_sender": "Подпись отправителя: ______________________",
+    "signature_receiver": "Подпись получателя: ______________________",
+    "modal_cancel": "Отмена",
+    "modal_save": "Сохранить",
+    "modal_print": "Печать",
+    "add_courier_title": "Добавить нового курьера",
+    "aria_toggle_sidebar": "Изменить размер боковой панели",
+    "aria_search": "Поиск",
+    "aria_start_invoice": "Начать накладную",
+    "aria_remove_item": "Удалить элемент",
+    "product_added": "{{name}} добавлен",
+    "server_invoice_id_missing": "Сервер не вернул id накладной",
+    "invoice_creation_error": "Ошибка при создании накладной",
+    "fetch_categories_error": "Ошибка получения категорий: {{msg}}",
+    "fetch_locations_error": "Ошибка получения локаций: {{msg}}",
+    "fetch_staffs_error": "Ошибка получения сотрудников: {{msg}}",
+    "fetch_invoices_error": "Ошибка получения накладных: {{msg}}",
+    "get_sale_price_types_error": "Ошибка получения типов цен продажи: {{msg}}",
+    "barcode_not_found": "Товар по штрихкоду не найден",
+    "barcode_fetch_error": "Ошибка при поиске по штрихкоду",
+    "barcode_error_detail": "Ошибка штрихкода: {{msg}}",
+    "search_error": "Ошибка поиска: {{msg}}",
+    "sale_price_type_not_selected_warning": "Тип цены продажи не выбран",
+    "missing_sender_warning": "Пожалуйста, выберите отправителя",
+    "missing_staff_warning": "Пожалуйста, выберите водителя / курьера",
+    "missing_invoice_id_error": "ID накладной отсутствует",
+    "no_products_added_error": "Товары не добавлены",
+    "qty_must_be_positive_error": "Количество всех товаров должно быть больше 0",
+    "save_success": "Сохранение успешно",
+    "save_error": "Ошибка сохранения",
+    "save_error_detail": "Ошибка сохранения: {{msg}}",
+    "invoice_not_started_error": "Накладная не начата",
+    "print_no_content_warning": "Нет содержимого для печати",
+    "print_window_failed_error": "Не удалось открыть новое окно. Проверьте блокировку всплывающих окон.",
+    "print_error": "Ошибка печати: {{msg}}",
+    "invalid_barcode_length": "Штрихкод должен содержать 13 цифр",
+    "start_invoice_success_transfer": "Операция перемещения успешно начата",
+    "start_invoice_success_return": "Операция возврата успешно начата",
+    "start_invoice_success_return_disposal": "Возврат отправлен на утилизацию",
+    "start_invoice_success_incoming": "Операция поступления успешно начата",
+    "notify_categories_panel_open_info": "Начните накладную, чтобы открыть панель категорий/товаров",
+    "notify_select_sender": "Пожалуйста, выберите отправителя",
+    "notify_select_driver": "Пожалуйста, выберите водителя",
+    "confirm_delete_warehouse": "Вы уверены, что хотите удалить этот склад? Это действие нельзя отменить!",
+    "confirm_delete_partner": "Вы уверены, что хотите удалить этого партнёра? Это действие нельзя отменить!",
+    "confirm_delete_client": "Вы уверены, что хотите удалить этого клиента?",
+    "confirm_delete_expense": "Вы уверены, что хотите удалить этот расход?",
+    "generic_error": "Произошла ошибка: {{msg}}",
+    "cancel": "Отмена",
+    "add": "Добавить",
+    "edit": "Редактировать",
+    "delete": "Удалить",
+    "save": "Сохранить",
+    "print": "Печать",
+    "close": "Закрыть",
+    "btn_finish": "Завершить",
+    "missing_receiver_warning": "Пожалуйста, выберите получателя",
+    "start_invoice_success_outgoing": "Операция расхода успешно начата",
+    "start_invoice_error": "Ошибка при запуске расхода: {{msg}}",
+    "fetch_stock_error": "Ошибка получения остатков: {{msg}}",
+    "product_missing_field": "Пожалуйста, укажите {{field}} для {{name}}",
+    "enter_price": "цена",
+    "enter_quantity": "количество",
+    "item_not_added": "Элемент не добавлен",
+    "me_label": "Я",
+    "other_label": "Другое",
+    "location_label": "Локация",
+    "print_document_title": "Документ",
+    "out_header_not_started": "Вывод товара со склада",
+    "out_header_selling": "Продажа",
+    "out_header_transfer": "Перемещение со склада",
+    "out_header_return": "Возврат со склада",
+    "out_header_disposal": "Утилизация",
+    "out_header_unknown": "Неизвестно",
+    "aria_view_category": "Просмотр категорий",
+    "aria_view_product": "Просмотр товаров",
+    "barcode_input_aria": "Ввод штрихкода",
+    "label_total_discount_value": "Общая сумма скидки",
+    "label_total_with_discount": "Сумма с учётом скидки",
+    "currency": "сум",
+    "search_loading_text": "Поиск...",
+    "no_search_results": "Ничего не найдено",
+    "table_col_stock": "На складе",
+    "table_col_discount": "Скидка(%)",
+    "table_col_total_discount": "Итого (со скидкой)",
+    "table_col_action": "Действие",
+    "aria_quantity_for": "Количество для",
+    "apply_all_button": "Применить ко всем",
+    "modal_title_outgoing": "Документ расхода",
+    "modal_total_discount_value": "Сумма скидки",
+    "modal_total_with_discount": "Итого со скидкой",
+    "legend.title": "Отгрузка / Перемещение",
+    "label.operation_type": "Тип операции",
+    "aria.operation_type": "Тип операции",
+    "label.status": "Статус",
+    "aria.status": "Статус операции",
+    "label.receiver": "Получатель",
+    "aria.receiver": "Получатель",
+    "label.driver": "Водитель",
+    "aria.driver": "Водитель",
+    "placeholder.choose": "Выберите...",
+    "placeholder.choose_driver": "Выберите водителя...",
+    "aria.start_operation": "Начать операцию",
+    "button.start_operation": "Начать операцию",
+    "driver.add_new_title": "Добавить нового курьера",
+    "driver.add_new_aria": "Добавить нового курьера",
+    "combo.draft_outgoing": "Черновик отгрузки",
+    "combo.approved_outgoing": "Подтвержденная отгрузка",
+    "combo.sent_outgoing": "Отправленная отгрузка",
+    "combo.received_outgoing": "Полученная отгрузка",
+    "combo.draft_transfer_out": "Черновик перемещения",
+    "combo.approved_transfer_out": "Подтвержденное перемещение",
+    "combo.sent_transfer_out": "Отправленное перемещение",
+    "combo.received_transfer_out": "Полученное перемещение",
+    "combo.unknown": "Статус неизвестен",
+    "type.outgoing_label": "Отгрузка (клиентам)",
+    "type.transfer_out_label": "Перемещение (на другой склад)",
+    "type.disposal_label": "Утилизация",
+    "status.draft": "Черновик",
+    "status.sent": "Отправлено",
+    "status.received": "Получено",
+    "productNotAdded": "Товар не добавлен",
+    "processing": "Обработка",
+    "mergedSuccessfully": "Успешно объединено",
+    "errorFetchingData": "Ошибка при получении данных",
+    "selected": "Выбрано",
+    "returnedInvoicesProgress": "Прогресс возвратных счетов-фактур",
+    "invoiceDeleted": "Счёт-фактура успешно удалена",
+    "failedToCancelInvoice": "Не удалось отменить счёт-фактуру",
+    "cancelThisInvoice": "Отменить этот счёт-фактуру?",
+    "cancelWarning": "Все позиции счёта-фактуры будут удалены. Это действие нельзя отменить.",
+    "canceling": "Отмена",
+    "yesCancel": "Да, отменить",
+    "cancelInvoice": "Отменить счёт-фактуру",
+    "cancelled": "Отменено",
+    "paid": "Оплачено",
+    "unpaid": "Не оплачено",
+    "allLocations": "Все локации",
+    "failedToLoadLocations": "Не удалось загрузить локации",
+    "failedToFetchInvoices": "Не удалось получить счета-фактуры",
+    "saveFailed": "Сохранение не удалось",
+    "saved": "Сохранено",
+    "invoices.title": "История накладных",
+    "invoices.subtitle": "Аудит, фильтры и экспорт по всем операциям склада",
+    "invoices.export_csv": "Экспорт CSV",
+    "invoices.export_pdf": "Экспорт PDF",
+    "invoices.export_pdf_alert": "Экспорт PDF — реализуйте на сервере или с помощью библиотеки",
+    "invoices.inventory_log": "Журнал инвентаризации",
+    "invoices.filter.all_types": "Все типы",
+    "invoices.filter.all_statuses": "Все статусы",
+    "invoices.filter.all_payments": "Все платежи",
+    "invoices.filter.paid": "Оплачено",
+    "invoices.filter.unpaid": "Не оплачено",
+    "invoices.filter.type": "Фильтр типа",
+    "invoices.filter.status": "Фильтр статуса",
+    "invoices.filter.from_date": "От даты",
+    "invoices.filter.to_date": "До даты",
+    "invoices.filter.payment": "Фильтр оплаты",
+    "invoices.showing_range": "Показано {{from}} - {{to}} из {{total}}",
+    "placeholder.sender_search": "Отправитель (поиск...)",
+    "placeholder.receiver_search": "Получатель (поиск...)",
+    "placeholder.search_invoice": "Поиск по номеру / Получателю или Отправителю",
+    "button.reset": "Сброс",
+    "button.apply": "Применить",
+    "button.open": "Открыть",
+    "button.edit": "Редактировать",
+    "button.edit_item": "Редактировать позицию",
+    "button.print": "Печать / PDF",
+    "button.back": "Назад",
+    "not_found": "Не найдено",
+    "table.id": "ID",
+    "table.type": "Тип",
+    "table.sender": "Отправитель",
+    "table.receiver": "Получатель",
+    "table.created": "Создано",
+    "table.status": "Статус",
+    "table.payment": "Оплата",
+    "table.total": "Итого",
+    "table.actions": "Действия",
+    "pagination.first": "Первая",
+    "pagination.previous": "Назад",
+    "pagination.page_of": "{{page}} / {{totalPages}}",
+    "pagination.next": "Вперед",
+    "pagination.last": "Последняя",
+    "detail.title": "Детали накладной",
+    "detail.loading": "Загрузка...",
+    "detail.type": "Тип",
+    "detail.status": "Статус",
+    "detail.payment": "Оплата",
+    "detail.total": "Итого",
+    "detail.items": "Позиции",
+    "detail.barcode": "Штрихкод",
+    "detail.qty": "Кол-во",
+    "detail.price": "Цена",
+    "detail.sender": "Отправитель",
+    "detail.receiver": "Получатель",
+    "detail.created_by": "Создан",
+    "detail.print_alert": "Печать / загрузка накладной (реализуйте на сервере)",
+    "editInvoiceComment": "Редактировать комментарий счёта-фактуры",
+    "note": "Заметка",
+    "returnViaRefund": "Вы можете вернуть товары завершённой операции через возврат",
+    "updating": "Обновляется"
 }
