--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -218,5 +218,278 @@
     "Qr_text2": "So‘nggi partiyani avtomatik tanlash",
     "Qr_text3": "Modallikka ko‘ra tanlash",
     "Qr_text4": "Shtrixkod skanerlanganda tizim so‘nggi partiyani avtomatik tanlab, hisobga qo‘shadi. Ishni tezlashtirish uchun qulay.",
-    "Qr_text5": "Shtrixkod skanerlanganda tizim partiyalarni ro‘yxat ko‘rinishida ko‘rsatadi va keraklisini qo‘lda tanlaysiz. Aniqlik uchun qulay."
+    "Qr_text5": "Shtrixkod skanerlanganda tizim partiyalarni ro‘yxat ko‘rinishida ko‘rsatadi va keraklisini qo‘lda tanlaysiz. Aniqlik uchun qulay.",
+    "income_header_not_started": "Qabul — omborga tushum",
+    "income_header_incoming": "Kirim",
+    "income_header_transfer": "Ko‘chirish",
+    "income_header_return": "Qaytarish",
+    "income_header_return_disposal": "Qaytarish (utilizatsiya)",
+    "income_header_unknown": "Noma'lum",
+    "toggle_sidebar_size_title": "Yon panel o‘lchamini o‘zgartirish",
+    "sidebar_category": "Kategoriya",
+    "sidebar_product": "Mahsulot",
+    "no_categories_found": "Hech qanday kategoriya topilmadi.",
+    "no_products_in_category": "Tanlangan kategoriyada mahsulot topilmadi.",
+    "select_category_prompt": "Mahsulotlarni ko‘rish uchun kategoriya tanlang.",
+    "product_no_name": "Nomi yo‘q",
+    "product_batch_label": "Partiya:",
+    "product_barcode_label": "Shtrixkod:",
+    "default_label": "Default",
+    "undefined_label": "—",
+    "op_incoming_card": "Omborga kirim",
+    "op_transfer_card": "Ko‘chirishni qabul qilish",
+    "op_return_card": "Qaytarishni qabul qilish",
+    "return_disposal_label": "Utilizatsiyaga yuborish",
+    "select_sender_placeholder": "Jo‘natuvchini ko‘rsating",
+    "selected_label": "Tanlanganlar:",
+    "search_nothing_found": "Hech narsa topilmadi",
+    "invoice_search_placeholder": "N(x) накладная raqami bo‘yicha qidirish (masalan INV-202510-0154)",
+    "invoice_search_note": "* Natijadan bir nechta накладные tanlab olishingiz mumkin. Bir xil id ikki marta tanlanmaydi.",
+    "select_button": "Tanla",
+    "comment_label": "Izoh (ixtiyoriy)",
+    "comment_placeholder": "Operatsiyaga izoh qo‘shing...",
+    "other_location_placeholder": "Tashqi joy nomi",
+    "select_staff_placeholder": "Yetkazib beruvchini / kuryerni tanlang",
+    "btn_start_transfer": "Ko‘chirishni qabul qilishni boshlash",
+    "btn_start_return": "Qaytarishni qabul qilishni boshlash",
+    "btn_start_return_disposal": "Qaytarishni (utilizatsiya) boshlash",
+    "btn_start_incoming": "Omborga kirimni boshlash",
+    "product_search_placeholder": "Mahsulot nomi bo‘yicha qidirish...",
+    "search_button": "Qidirish",
+    "barcode_button": "Shtrixkod",
+    "barcode_input_placeholder": "13 ta raqamni kiriting...",
+    "label_sender": "Jo‘natuvchi",
+    "label_receiver": "Qabul qiluvchi",
+    "label_time": "Vaqt",
+    "label_total_sum": "Jami summa",
+    "sale_price_type_label": "Sotuv narxi turi",
+    "search_results_title": "Qidiruv natijalari",
+    "clear_results_title": "Natijalarni tozalash",
+    "results_count_label": "{{count}} natija",
+    "table_col_index": "#",
+    "table_col_batch": "Partiya",
+    "table_col_name": "Nomi",
+    "table_col_price": "Narx",
+    "table_col_qty": "Miqdori",
+    "table_col_unit": "O‘lchov birligi",
+    "table_col_sale_price": "Sotuv narxi",
+    "table_col_total": "Jami",
+    "table_col_remove": "O‘chirish",
+    "table_col_sold": "Sotilgan",
+    "table_col_sale_price_label": "Sotuv narxi (label)",
+    "no_products_message": "Mahsulotlar mavjud emas",
+    "dash_fallback": "—",
+    "new_batch_label": "Yangi partiya",
+    "s_price_placeholder": "--",
+    "price_type_not_selected": "Narx turi tanlanmagan",
+    "remove_row_title": "Qatorni o‘chirish",
+    "qty_exceeds_stock": "Miqdor ombordagi ({{avail}}) dan oshdi",
+    "modal_title_transfer": "Omborga ko‘chirish hujjati",
+    "modal_title_return": "Qaytarish qabul qilish hujjati",
+    "modal_title_return_disposal": "Qaytarish qabul qilish hujjati (utilizatsiya)",
+    "modal_title_incoming": "Omborga kirim hujjati",
+    "modal_total_label": "Jami",
+    "signature_sender": "Jo‘natuvchi imzosi: ______________________",
+    "signature_receiver": "Qabul qiluvchi imzosi: ______________________",
+    "modal_cancel": "Bekor qilish",
+    "modal_save": "Saqlash",
+    "modal_print": "Chop etish",
+    "add_courier_title": "Yangi kuryer qo‘shish",
+    "aria_toggle_sidebar": "Yon panel o‘lchamini o‘zgartirish",
+    "aria_search": "Qidirish",
+    "aria_start_invoice": "Nакладnani boshlash",
+    "aria_remove_item": "Elementni o‘chirish",
+    "product_added": "{{name}} qo'shildi",
+    "server_invoice_id_missing": "Server invoice id qaytarmadi",
+    "invoice_creation_error": "Nакладnani yaratishda xato",
+    "fetch_categories_error": "Kategoriyalarni olishda xato: {{msg}}",
+    "fetch_locations_error": "Joylarni olishda xato: {{msg}}",
+    "fetch_staffs_error": "Xodimlarni olishda xato: {{msg}}",
+    "fetch_invoices_error": "Nакladlarni olishda xatolik: {{msg}}",
+    "get_sale_price_types_error": "Sotuv narxlari turlarini olishda xato: {{msg}}",
+    "barcode_not_found": "Ushbu shtrixkod bo‘yicha mahsulot topilmadi",
+    "barcode_fetch_error": "Shtrixkodni tekshashda xato yuz berdi",
+    "barcode_error_detail": "Shtrixkod xatosi: {{msg}}",
+    "search_error": "Qidiruv xatosi: {{msg}}",
+    "sale_price_type_not_selected_warning": "Sotuv narxi turi tanlanmagan",
+    "missing_sender_warning": "Iltimos, jo‘natuvchini tanlang",
+    "missing_staff_warning": "Iltimos, haydovchini / kuryerni tanlang",
+    "missing_invoice_id_error": "Invoice ID mavjud emas",
+    "no_products_added_error": "Hech qanday mahsulot qo‘shilmagan",
+    "qty_must_be_positive_error": "Barcha mahsulotlar uchun miqdor 0 dan katta bo‘lishi kerak",
+    "save_success": "Saqlash muvaffaqiyatli",
+    "save_error": "Saqlashda xato",
+    "save_error_detail": "Saqlash xatosi: {{msg}}",
+    "invoice_not_started_error": "Invoice (накладная) boshlanmagan",
+    "print_no_content_warning": "Chop etish uchun tarkib yo‘q",
+    "print_window_failed_error": "Yangi oyna ochilmadi. Popup bloklanmaganligini tekshiring.",
+    "print_error": "Chop etish xatosi: {{msg}}",
+    "invalid_barcode_length": "Shtrixkod 13 raqamdan iborat bo‘lishi kerak",
+    "start_invoice_success_transfer": "Ko‘chirish operatsiyasi muvaffaqiyatli boshlandi",
+    "start_invoice_success_return": "Qaytarish operatsiyasi muvaffaqiyatli boshlandi",
+    "start_invoice_success_return_disposal": "Qaytarish utilizatsiyaga jo‘natildi",
+    "start_invoice_success_incoming": "Kirim operatsiyasi muvaffaqiyatli boshlandi",
+    "notify_categories_panel_open_info": "Kategoriya/mahsulot panelini ochish uchun invoice boshlang",
+    "notify_select_sender": "Iltimos, jo‘natuvchini tanlang",
+    "notify_select_driver": "Iltimos, haydovchini tanlang",
+    "confirm_delete_warehouse": "Siz ushbu omborni o‘chirmoqchimisiz? Bu amal qaytarilmaydi!",
+    "confirm_delete_partner": "Siz ushbu hamkorni o‘chirmoqchimisiz? Bu amal qaytarilmaydi!",
+    "confirm_delete_client": "Siz ushbu mijozni o‘chirmoqchimisiz?",
+    "confirm_delete_expense": "Siz ushbu xarajatni o‘chirmoqchimisiz?",
+    "generic_error": "Xato yuz berdi: {{msg}}",
+    "cancel": "Bekor qilish",
+    "add": "Qo‘shish",
+    "edit": "Tahrirlash",
+    "delete": "O‘chirish",
+    "save": "Saqlash",
+    "print": "Chop etish",
+    "close": "Yopish",
+    "btn_finish": "Yakunlash",
+    "missing_receiver_warning": "Iltimos, qabul qiluvchini tanlang",
+    "start_invoice_success_outgoing": "Chiqim operatsiyasi muvaffaqiyatli boshlandi",
+    "start_invoice_error": "Chiqimni boshlashda xato: {{msg}}",
+    "fetch_stock_error": "Stocklarni olishda xato: {{msg}}",
+    "product_missing_field": "Iltimos, {{name}} uchun {{field}} ni kiriting",
+    "enter_price": "narx",
+    "enter_quantity": "miqdor",
+    "item_not_added": "Element qo'shilmadi",
+    "me_label": "Men",
+    "other_label": "Boshqa",
+    "location_label": "Joy",
+    "print_document_title": "Hujjat",
+    "out_header_not_started": "Tovarni ombordan chiqarish",
+    "out_header_selling": "Sotuv",
+    "out_header_transfer": "Ombordan ko'chirish",
+    "out_header_return": "Ombordan vozvrat",
+    "out_header_disposal": "Utyilizatsiya",
+    "out_header_unknown": "Noma'lum",
+    "aria_view_category": "Kategoriyalarni ko'rish",
+    "aria_view_product": "Mahsulotlarni ko'rish",
+    "barcode_input_aria": "Barcode input",
+    "label_total_discount_value": "Umumiy chegirma qiymati",
+    "label_total_with_discount": "Chegirma bilan jami",
+    "currency": "сум",
+    "search_loading_text": "Qidirilmoqda...",
+    "no_search_results": "Natija topilmadi",
+    "table_col_stock": "Omborda",
+    "table_col_discount": "Chegirma(%)",
+    "table_col_total_discount": "Jami (chegirma bilan)",
+    "table_col_action": "Amal",
+    "aria_quantity_for": "Miqdor uchun",
+    "apply_all_button": "Barchasiga qo‘llash",
+    "modal_title_outgoing": "Chiqqim hujjati",
+    "modal_total_discount_value": "Umumiy chegirma qiymati",
+    "modal_total_with_discount": "Chegirma bilan jami",
+    "legend.title": "Sotuv / Ko‘chirish",
+    "label.operation_type": "Operatsiya turi",
+    "aria.operation_type": "Operatsiya turi",
+    "label.status": "Holat",
+    "aria.status": "Operatsiya holati",
+    "label.receiver": "Qabul qiluvchi",
+    "aria.receiver": "Qabul qiluvchi",
+    "label.driver": "Haydovchi",
+    "aria.driver": "Haydovchi",
+    "placeholder.choose": "Tanlang...",
+    "placeholder.choose_driver": "Haydovchini tanlang...",
+    "aria.start_operation": "Operatsiyani boshlash",
+    "button.start_operation": "Operatsiyani boshlash",
+    "driver.add_new_title": "Yangi kuryer qo‘shish",
+    "driver.add_new_aria": "Yangi kuryer qo‘shish",
+    "combo.draft_outgoing": "Chiqim qorovul (draft)",
+    "combo.approved_outgoing": "Tasdiqlangan chiqim",
+    "combo.sent_outgoing": "Yuborilgan chiqim",
+    "combo.received_outgoing": "Qabul qilingan chiqim",
+    "combo.draft_transfer_out": "Ko‘chirish (draft)",
+    "combo.approved_transfer_out": "Tasdiqlangan ko‘chirish",
+    "combo.sent_transfer_out": "Yuborilgan ko‘chirish",
+    "combo.received_transfer_out": "Qabul qilingan ko‘chirish",
+    "combo.unknown": "Holat noma'lum",
+    "type.outgoing_label": "Sotish (Klientlarga)",
+    "type.transfer_out_label": "Ko‘chirish (Boshqa omborga)",
+    "type.disposal_label": "Utyilizatsiya",
+    "status.draft": "Qoralama",
+    "status.sent": "Yuborilgan",
+    "status.received": "Qabul qilingan",
+    "productNotAdded": "Tovar qo'shilmadi",
+    "processing": "Qayta ishlanmoqda",
+    "mergedSuccessfully": "Muvaffaqiyatli birlashtirildi",
+    "errorFetchingData": "Ma'lumotlarni olishda xatolik",
+    "selected": "Tanlangan",
+    "returnedInvoicesProgress": "Qaytarilgan hisob-fakturalar jarayoni",
+    "invoiceDeleted": "Hisob-faktura muvaffaqiyatli o'chirildi",
+    "failedToCancelInvoice": "Hisob-fakturani bekor qilish amalga oshmadi",
+    "cancelThisInvoice": "Ushbu hisob-fakturani bekor qilasizmi?",
+    "cancelWarning": "Barcha hisob-faktura bandlari o'chiriladi. Ushbu amalni ortga qaytarib bo'lmaydi.",
+    "canceling": "Bekor qilinmoqda",
+    "yesCancel": "Ha, bekor qil",
+    "cancelInvoice": "Hisob-fakturani bekor qilish",
+    "cancelled": "Bekor qilingan",
+    "paid": "To‘langan",
+    "unpaid": "To‘lanmagan",
+    "allLocations": "Barcha joylar",
+    "failedToLoadLocations": "Joylarni yuklashda xatolik yuz berdi",
+    "failedToFetchInvoices": "Hisob-fakturalarni olishda xatolik yuz berdi",
+    "saveFailed": "Saqlash amalga oshmadi",
+    "saved": "Saqlangan",
+    "invoices.title": "Hujjatlar tarixi",
+    "invoices.subtitle": "Barcha ombor operatsiyalari uchun audit, filtrlash va eksport",
+    "invoices.export_csv": "CSV eksport",
+    "invoices.export_pdf": "PDF eksport",
+    "invoices.export_pdf_alert": "PDF eksport — serverda yoki kutubxona orqali amalga oshiring",
+    "invoices.inventory_log": "Ombor jurnali",
+    "invoices.filter.all_types": "Barcha turlar",
+    "invoices.filter.all_statuses": "Barcha holatlar",
+    "invoices.filter.all_payments": "Barcha to'lovlar",
+    "invoices.filter.paid": "To'langan",
+    "invoices.filter.unpaid": "To'lanmagan",
+    "invoices.filter.type": "Tur bo'yicha filtr",
+    "invoices.filter.status": "Holat bo'yicha filtr",
+    "invoices.filter.from_date": "Boshlang'ich sana",
+    "invoices.filter.to_date": "Tugatish sana",
+    "invoices.filter.payment": "To'lov filtri",
+    "invoices.showing_range": "{{from}} - {{to}} ko'rsatilmoqda, jami {{total}}",
+    "placeholder.sender_search": "Jo'natuvchi (qidiruv...)",
+    "placeholder.receiver_search": "Qabul qiluvchi (qidiruv...)",
+    "placeholder.search_invoice": "ID / Qabul qiluvchi yoki Jo'natuvchi bo'yicha qidiruv",
+    "button.reset": "Qayta tiklash",
+    "button.apply": "Qo'llash",
+    "button.open": "Ochish",
+    "button.edit": "Tahrirlash",
+    "button.edit_item": "Elementni tahrirlash",
+    "button.print": "Chop et / PDF",
+    "button.back": "Orqaga",
+    "loading": "Yuklanmoqda...",
+    "not_found": "Topilmadi",
+    "table.id": "ID",
+    "table.type": "Tur",
+    "table.sender": "Jo'natuvchi",
+    "table.receiver": "Qabul qiluvchi",
+    "table.created": "Yaratilgan",
+    "table.status": "Holat",
+    "table.payment": "To'lov",
+    "table.total": "Jami",
+    "table.actions": "Amallar",
+    "pagination.first": "Bosh",
+    "pagination.previous": "Oldingi",
+    "pagination.page_of": "{{page}} / {{totalPages}}",
+    "pagination.next": "Keyingi",
+    "pagination.last": "Oxirgi",
+    "detail.title": "Hujjat tafsiloti",
+    "detail.loading": "Yuklanmoqda...",
+    "detail.type": "Tur",
+    "detail.status": "Holat",
+    "detail.payment": "To'lov",
+    "detail.total": "Jami",
+    "detail.items": "Mahsulotlar",
+    "detail.barcode": "Shtrixkod",
+    "detail.qty": "Miqdor",
+    "detail.price": "Narx",
+    "detail.sender": "Jo'natuvchi",
+    "detail.receiver": "Qabul qiluvchi",
+    "detail.created_by": "Yaratgan",
+    "detail.print_alert": "Hujjatni chop etish / yuklash (serverda yoki kutubxona kerak)",
+    "editInvoiceComment": "Hisob-faktura izohini tahrirlash",
+    "note": "Eslatma",
+    "returnViaRefund": "Operatsiya yakunlangan tovarlarni vozvrat orqali qaytarishingiz mumkin",
+    "updating": "Yangilanmoqda"
 }
