--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -218,5 +218,9 @@
     "Qr_text2": "Автоматический выбор последней партии",
     "Qr_text3": "Выбор по модальности",
     "Qr_text4": "При сканировании штрихкода система автоматически выбирает последнюю партию и добавляет её в счёт. Удобно для ускорения работы.",
-    "Qr_text5": "При сканировании штрихкода система отображает партии в виде списка, и вы вручную выбираете нужную. Удобно для точности."
+    "Qr_text5": "При сканировании штрихкода система отображает партии в виде списка, и вы вручную выбираете нужную. Удобно для точности.",
+    "Dealer_create": "Создать дилер",
+    "Dealer_Delete": "Удалить дилера",
+    "Dealer_Delete_text": "Вы действительно хотите удалить этого дилера ?",
+    "Login": "Логин"
 }
