--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -491,5 +491,14 @@
     "editInvoiceComment": "Редактировать комментарий счёта-фактуры",
     "note": "Заметка",
     "returnViaRefund": "Вы можете вернуть товары завершённой операции через возврат",
-    "updating": "Обновляется"
+    "updating": "Обновляется",
+    "Product": "Продукты",
+    "Create_product": "Создать продукты",
+    "Delete_product": "Удалить продукт",
+    "Edit_product": "Изменить продукт",
+    "Delete_product_text": "Вы действительно хотите удалить этот продукт? Это действие нельзя отменить!",
+    "Select_unit": "Выберите единицу измерения",
+    "Dealer_create": "Создать дилера",
+    "Dealer_Delete": "Удалить дилера",
+    "Dealer_Delete_text": "Вы действительно хотите уждаить этого дилера?"
 }
