--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -222,5 +222,10 @@
   "Dealer_create": "Create dealer",
   "Dealer_Delete": "Delete dealer",
   "Dealer_Delete_text": "Are you sure you want to delete this dealer?",
-  "Login": "Login"
+  "Login": "Login",
+  "Create_product": "Create product",
+  "Delete_product": "Delete product",
+  "Edit_product": "Edit product",
+  "Delete_product_text": "Are you sure you want to delete this product? This action cannot be undone!",
+  "Select_unit": "Select unit of measurement"
 }
