--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -491,5 +491,13 @@
     "editInvoiceComment": "Hisob-faktura izohini tahrirlash",
     "note": "Eslatma",
     "returnViaRefund": "Operatsiya yakunlangan tovarlarni vozvrat orqali qaytarishingiz mumkin",
-    "updating": "Yangilanmoqda"
+    "updating": "Yangilanmoqda",
+    "Dealer_create": "Diler yaratish",
+    "Dealer_Delete": "Diler o`chirish",
+    "Dealer_Delete_text": "Siz rostanham o‘chirmoqchimisiz bu dilerni ?",
+    "Create_product": "Mahsulot yaratish",
+    "Delete_product": "Mahsulotni o‘chirish",
+    "Edit_product": "Mahsulotni tahrirlash",
+    "Delete_product_text": "Ushbu mahsulotni o‘chirmoqchimisiz? Bu amalni qaytarib bo‘lmaydi!",
+    "Select_unit": "O‘lchov birligini tanlang"
 }
