--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -500,5 +500,6 @@
     "Select_unit": "Выберите единицу измерения",
     "Dealer_create": "Создать дилера",
     "Dealer_Delete": "Удалить дилера",
-    "Dealer_Delete_text": "Вы действительно хотите уждаить этого дилера?"
+    "Dealer_Delete_text": "Вы действительно хотите уждаить этого дилера?",
+    "partlyPaid":"Частично"
 }
