--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -500,5 +500,6 @@
   "Delete_product": "Delete product",
   "Edit_product": "Edit product",
   "Delete_product_text": "Are you sure you want to delete this product? This action cannot be undone!",
-  "Select_unit": "Select unit of measurement"
+  "Select_unit": "Select unit of measurement",
+  "partlyPaid":"Partially Paid"
 }
