--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -501,5 +501,33 @@
   "Edit_product": "Edit product",
   "Delete_product_text": "Are you sure you want to delete this product? This action cannot be undone!",
   "Select_unit": "Select unit of measurement",
-  "partlyPaid":"Partially Paid"
+  "partlyPaid": "Partially Paid",
+  "Warehouse_user": "Warehouse Users",
+  "Warehouse_user_create": "Create User",
+  "Role": "Role",
+  "Kassir": "Cashier",
+  "Manager": "Manager",
+  "Warehouser": "Storekeeper",
+  "Warehouse_user_Edit": "Edit User Information",
+  "Warehouse_user_delete": "Delete Employee",
+  "Warehouse_user_delete_text": "Are you sure you want to delete this employee? This action cannot be undone!",
+  "Report_finance_title": "Sales and Warehouse Report",
+  "sell_product": "Sold Products",
+  "total_sum": "Total Turnover",
+  "Warehouse_prodcut": "Products in Warehouse",
+  "Sell_price": "Sales Amount",
+  "Klient_count": "Number of Clients",
+  "Partner_count": "Number of Partners",
+  "Tottal_h": "Total Calculation",
+  "Cashes": "Cash Desks",
+  "select_warehouse": "Select a warehouse to view cash desks",
+  "Exp_sum": "Expense Amount",
+  "Pay_sum": "Payment Amount",
+  "More": "More details",
+  "Grin": "Net Profit",
+  "status_m": "Status",
+  "Grin2": "Profitable",
+  "bad2": "Unprofitable",
+  "Profil": "Profile",
+  "Out": "Log out"
 }
