--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -501,5 +501,34 @@
     "Dealer_create": "Создать дилера",
     "Dealer_Delete": "Удалить дилера",
     "Dealer_Delete_text": "Вы действительно хотите уждаить этого дилера?",
-    "partlyPaid":"Частично"
+    "partlyPaid": "Частично",
+    "Warehouse_user": "Пользователи склада",
+    "Login": "Логин",
+    "Warehouse_user_create": "Создать пользователя",
+    "Role": "Роль",
+    "Kassir": "Кассир",
+    "Manager": "Менеджер",
+    "Warehouser": "Кладовщик",
+    "Warehouse_user_Edit": "Редактировать данные пользователя",
+    "Warehouse_user_delete": "Удалить сотрудника",
+    "Warehouse_user_delete_text": "Вы действительно хотите удалить этого сотрудника? Это действие необратимо!",
+    "Report_finance_title": "Отчет по продажам и складу",
+    "sell_product": "Проданные товары",
+    "total_sum": "Общий оборот",
+    "Warehouse_prodcut": "Товары на складе",
+    "Sell_price": "Сумма продаж",
+    "Klient_count": "Количество клиентов",
+    "Partner_count": "Количество партнёров",
+    "Tottal_h": "Общий расчет",
+    "Cashes": "Кассы",
+    "select_warehouse": "Выберите склад, чтобы увидеть кассы",
+    "Exp_sum": "Сумма расходов",
+    "Pay_sum": "Сумма оплат",
+    "More": "Подробнее",
+    "Grin": "Чистая прибыль",
+    "status_m": "Статус",
+    "Grin2": "Прибыльный",
+    "bad2": "Убыточный",
+    "Profil": "Профиль",
+    "Out": "Выйти"
 }
