--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -500,5 +500,34 @@
     "Edit_product": "Mahsulotni tahrirlash",
     "Delete_product_text": "Ushbu mahsulotni o‘chirmoqchimisiz? Bu amalni qaytarib bo‘lmaydi!",
     "Select_unit": "O‘lchov birligini tanlang",
-    "partlyPaid": "Qisman to‘langan"
+    "partlyPaid": "Qisman to‘langan",
+    "Warehouse_user": "Ombor foydalanuvchilari",
+    "Login": "Login",
+    "Warehouse_user_create": "Foydalanuvchi yaratish",
+    "Role": "Roli",
+    "Kassir": "Kassir",
+    "Manager": "Meneger",
+    "Warehouser": "Omborchi",
+    "Warehouse_user_Edit": "Foydalanuvchi maʼlumotlarini tahrirlash",
+    "Warehouse_user_delete": "Xodim o‘chirish",
+    "Warehouse_user_delete_text": "Siz haqiqatdan ham bu xodimni o‘chirmoqchimisiz? Bu amalni qaytarib bo‘lmaydi!",
+    "Report_finance_title": "Sotuv va ombor hisoboti",
+    "sell_product": "Sotilgan mahsulot",
+    "total_sum": "Umumiy aylanma",
+    "Warehouse_prodcut": "Ombordagi tovarlar",
+    "Sell_price": "Sotuv summasi",
+    "Klient_count": "Klientlar soni",
+    "Partner_count": "Hamkorlar soni",
+    "Tottal_h": "Umumiy hisob",
+    "Cashes": "Kassalar",
+    "select_warehouse": "Kassalarni ko'rish uchun ombor tanlang",
+    "Exp_sum": "Xarajatlar summasi",
+    "Pay_sum": "To'lovlar summasi",
+    "More": "Batafsil ma'lumot",
+    "Grin": "Sof foyda",
+    "status_m": "Holat",
+    "Grin2": "Foydali",
+    "bad2": "Zararli",
+    "Profil": "Profil",
+    "Out": "Chiqish"
 }
