--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -530,5 +530,11 @@
     "Grin2": "Прибыльный",
     "bad2": "Убыточный",
     "Profil": "Профиль",
-    "Out": "Выйти"
+    "Out": "Выйти",
+    "Product_analiz": "Анализ продукта",
+    "Dont_sells": "Не продающиеся",
+    "Total_money": "Общий доход",
+    "Top5": "Топ 5 продаваемых продуктов",
+    "Bottom5": "Топ 5 наименее продаваемых продуктов",
+    "AddAll": "Добавить всё"
 }
