--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -529,5 +529,11 @@
     "Grin2": "Foydali",
     "bad2": "Zararli",
     "Profil": "Profil",
-    "Out": "Chiqish"
+    "Out": "Chiqish",
+    "Product_analiz": "Mahsulot Tahlili",
+    "Dont_sells": "Sotilmaganlar",
+    "Total_money": "Jami Daromad",
+    "Top5": "Top 5 Sotiladigan Mahsulotlar",
+    "Bottom5": "Top 5 Kam Sotiladigan Mahsulotlar",
+    "AddAll": "Xamasini qoshish"
 }
