--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -535,5 +535,10 @@
   "Total_money": "Total Revenue",
   "Top5": "Top 5 Best-Selling Products",
   "Bottom5": "Top 5 Least-Selling Products",
-  "AddAll": "Add All"
+  "AddAll": "Add All",
+  "Creaete_Category": "Create Category",
+  "Delete_Category": "Delete Category",
+  "Delete__text_Category": "Are you sure you want to delete this category? This action cannot be undone!",
+  "Edit_Category": "Edit Category",
+  "Category": "Category"
 }
