--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -537,5 +537,9 @@
     "Top5": "Топ 5 продаваемых продуктов",
     "Bottom5": "Топ 5 наименее продаваемых продуктов",
     "AddAll": "Добавить всё",
-    "Creaete_Category": "Создание категорий"
+    "Creaete_Category": "Создание категорий",
+    "Delete_Category": "Уделения категорий",
+    "Delete__text_Category": "Вы действительно хотите удалить этот категорий? Это действие нельзя отменить!",
+    "Edit_Category": "Изменений категорий",
+    "Category": "Категорий"
 }
