--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -535,5 +535,10 @@
     "Total_money": "Jami Daromad",
     "Top5": "Top 5 Sotiladigan Mahsulotlar",
     "Bottom5": "Top 5 Kam Sotiladigan Mahsulotlar",
-    "AddAll": "Xamasini qoshish"
+    "AddAll": "Xamasini qoshish",
+    "Creaete_Category": "Kategoriya yaratish",
+    "Delete_Category": "Kategoriya o‘chirish",
+    "Delete__text_Category": "Siz ushbu kategoriyani o‘chirmoqchimisiz? Bu amalni qaytarib bo‘lmaydi!",
+    "Edit_Category": "Kategoriya tahrirlash",
+    "Category": "Kategoriya"
 }
